--- a/hw.html
+++ b/hw.html
@@ -6,25 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="hw1.html"></a>
+    <a href="hw1.html">hw1</a>
     <br>
-    <a href="hw2.html"></a>
+    <a href="hw2.html">hw2</a>
     <br>
-    <a href="hw3.html"></a>
+    <a href="hw3.html">hw3</a>
     <br>
-    <a href="hw4.html"></a>
+    <a href="hw4.html">hw4</a>
     <br>
-    <a href="hw5.html"></a>
+    <a href="hw5.html">hw5</a>
     <br>
-    <a href="hw6.html"></a>
+    <a href="hw6.html">hw6</a>
     <br>
-    <a href="hw7.html"></a>
+    <a href="hw7.html">hw7</a>
     <br>
-    <a href="hw8.html"></a>
+    <a href="hw8.html">hw8</a>
     <br>
-    <a href="hw9.html"></a>
+    <a href="hw9.html">hw9</a>
     <br>
-    <a href="hw10.html"></a>
+    <a href="hw10.html">hw10</a>
     <br>
 </body>
 </html>
