--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <header>
-        <h6>Kanokpol's Profile</h6>
+        <h1>Kanokpol's Profile</h1>
     </header>
     <nav>
-        <a href="Home"></a>
-        <a href="About"></a>
-        <a href="Contact"></a>
+        <a href="" >Home</a>
+        <a href="">About</a>
+        <a href="">Contact</a>
     </nav>
     <section>
         <h2>Hello</h2>
@@ -26,9 +26,9 @@
     </section>
     
     <footer>
-        <a href="IG"></a>
-        <a href="FB"></a>
-        <a href="Email"></a>
+        <a href="https://www.instagram.com/kanokpol508/">IG</a>
+        <a href="https://www.facebook.com/kanokpol.ark/">FB</a>
+        <a href="">Email</a>
     </footer>
     
 </body>
