--- a/index.html
+++ b/index.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title> <link rel="stylesheet" href="mystyle.css">
-    <link rel="stylesheet" href="mystyle.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Document</title> <link rel="stylesheet" href="mystyle.css">
+<link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
-    <header>
-        <h1>Kanokpol's Profile</h1>
-    </header>
-    <nav>
-        <a href="" >Home</a>
-        <a href="">About</a>
-        <a href="">Contact</a>
-    </nav>
-    <section>
-        <h2>Hello</h2>
-        <h3>I'm Kanokpol Kaewsri</h3>
-        <h4>Web Designer</h4>
-        <a href="hw.html"><input type="submit" value="Connect"></a>
-        <aside>
-            <img src="Kanokpol.jpg" alt="Kanokpol's Photo">
-        </aside>
-    </section>
-    
-    <footer>
-        <a href="https://www.instagram.com/kanokpol508/">IG</a>
-        <a href="https://www.facebook.com/kanokpol.ark/">FB</a>
-        <a href="">Email</a>
-    </footer>
-    
+<header>
+<h6>Kanokpol's Profile</h6>
+</header>
+<nav>
+<a href="Home">Home</a>
+<a href="About">About</a>
+<a href="Contact">Contact</a>
+</nav>
+<hr>
+<section>
+<h2>Hello</h2>
+<h3>I'm Kanokpol Kaewsri</h3>
+<h4>Web Designer</h4>
+</section>
+<br>
+
+<a href="hw.html"><input type="submit" value="Connect"></a>
+<br>
+<aside>
+<img src="Kanokpol.jpg" alt="Kanokpol's Photo">
+</aside>
+
+<br><br><br><br>
+<footer>
+<a href="https://www.instagram.com/kanokpol508/">IG</a>
+<a href="https://www.facebook.com/kanokpol.ark">FB</a>
+<a href="https://mail.google.com/mail/u/0/#inbox">Email</a>
+</footer>
 </body>
 </html>
